Added nf-validation Samplesheet with required changed to nf modules and workflows

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,7 @@
 params {
-    genome     = "${baseDir}/data/genome.fa" 
-    reads      = "${baseDir}/data/reads/ENCSR000COQ1_{1,2}.fastq.gz" 
-    results    = "results"
+    genome  = "${baseDir}/data/genome.fa" 
+    input   = "${baseDir}/assets/samplesheet.csv" 
+    outdir  = "results"
 }
 
 process {
