Made changes to use compressed genome files and updated nf-test assertions

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,5 +1,5 @@
 params {
-    genome  = "${baseDir}/data/genome.fa" 
+    genome  = "${baseDir}/data/genome.fa.gz" 
     input   = "${baseDir}/assets/samplesheet.csv" 
     outdir  = "results"
 }
