--- a/nextflow.config
+++ b/nextflow.config
@@ -15,6 +15,7 @@ profiles {
         singularity.autoMounts  = true
         docker.enabled          = false
         apptainer.enabled       = false
+        conda.enabled           = false
     }
 
     docker {
@@ -22,6 +23,7 @@ profiles {
         docker.userEmulation    = true
         singularity.enabled     = false
         apptainer.enabled       = false
+        conda.enabled           = false
     } 
 
     apptainer {
@@ -29,6 +31,14 @@ profiles {
         apptainer.autoMounts    = true
         singularity.enabled     = false
         docker.enabled          = false
+        conda.enabled           = false
+    }
+
+    conda {
+        conda.enabled          = true
+        docker.enabled         = false
+        singularity.enabled    = false
+        apptainer.enabled      = false
     }
 
     cluster {
@@ -45,22 +55,18 @@ profiles {
         }
     }
 
-    test { 
-        process{
-            executor = 'local'
-            container = ''
-        }
-    }
+    test {  includeConfig 'conf/test.config' }
 }
+
 
 plugins {
     id 'nf-validation@1.1.3'
     }
 
 manifest {
-    name            = 'kylacochrane/nf-journey'
+    name            = 'kylacochrane/nf-explore'
     author          = """Kyla Cochrane"""
-    homePage        = 'https://github.com/kylacochrane/nf-journey'
+    homePage        = 'https://github.com/kylacochrane/nf-explore'
     description     = """STAR RNA-seq mapping pipeline"""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=23.10.1'
