Added nf-iridanext@0.2.0 plugin to pipeline

--- a/nextflow.config
+++ b/nextflow.config
@@ -61,7 +61,22 @@ profiles {
 
 plugins {
     id 'nf-validation@1.1.3'
+    id 'nf-iridanext@0.2.0'
     }
+
+iridanext {
+    enabled = true
+    output {
+        path = "${params.outdir}/iridanext.output.json.gz"
+        overwrite = true
+        files {
+            samples = [
+                "**/Aligned.sortedByCoord.out.bam",
+                "**/Aligned.sortedByCoord.out.bam.bai,"
+            ]
+        }
+    }
+}
 
 manifest {
     name            = 'kylacochrane/nf-explore'
