--- a/nextflow.config
+++ b/nextflow.config
@@ -58,6 +58,13 @@ profiles {
     test {  includeConfig 'conf/test.config' }
 }
 
+// Set default registry for Apptainer, Docker, Podman and Singularity independent of -profile
+// Will not be used unless Apptainer / Docker / Podman / Singularity are enabled
+// Set to your registry if you have a mirror of containers
+apptainer.registry   = 'quay.io'
+docker.registry      = 'quay.io'
+podman.registry      = 'quay.io'
+singularity.registry = 'quay.io'
 
 plugins {
     id 'nf-validation@1.1.3'
